--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "helmet": "^4.1.0",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
+    "package.json": "^2.0.1",
     "sequelize": "^6.3.5",
+    "uuid": "^8.3.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
